<resources>
    <string name="app_name">Calculator</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonErase">C</string>
    <string name="buttonSum">+</string>
    <string name="buttonRest">-</string>
    <string name="buttonMultiply">x</string>
    <string name="buttonDivide">÷</string>
    <string name="buttonComa">,</string>
    <string name="buttonResultado">=</string>
    <string name="parentesis">(</string>
    <string name="parentesis2">)</string>
    <string name="delete_number">Delete number</string>
    <string name="action_settings">Acerca de</string>
    <string name="del">DEL</string>
    <string name="exponente">x²</string>
    <string name="realizado_por_antonio">Realizado por Moreno97</string>
    <string name="https_github_com_moreno97_calculator">https://github.com/Moreno97/Calculator</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="parentesis_left">(</string>
    <string name="parentesis_right">)</string>
    <string name="log">log</string>
    <string name="tan">tan</string>
    <string name="percent">%</string>
    <string name="settings">Ajustes</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="banner_inferior_ad_unit_id">ca-app-pub-8985937219630470/6645726347</string>
    <string name="calculatorInfo">Calculator es una calculadora básica y simple para Android, donde podrá realizar las operaciones más comunes del día a día.\n\n Nada de calculadoras científicas y repletas de funciones no aptas para un usuario común y corriente.\n Síentase libre de utilizar la aplicación y recomendársela a sus amigos y familiares.</string>
    <string name="info_app">Version 1.2.3\n Copyright © 2016 \n Todos los derechos reservados.</string>
    <string name="author">Author</string>
</resources>
